<resources>
    <string name="app_name">GrawAPP</string>
    <string name="enter_you_email">enter you email</string>
    <string name="enter_your_password">enter your password</string>
    <string name="button_login">Login</string>
    <string name="button_or_sign_in">or sign up</string>
    <string name="sign_in">Sign up</string>
    <string name="title_activity_main_application">MainApplicationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="request_client_id">77240329945-9nun2iv4tdojv0r3p4kvlng6a27r4cbc.apps.googleusercontent.com</string>
    <string name="charts">Charts</string>
    <string name="flight_path">Flight Path</string>
    <string name="messages">Messages</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chart_temperature">Temperature</string>
    <string name="chart_dewpoint">Dewpoint</string>
    <string name="chart_pressure">Pressure</string>
    <string name="chart_humidity">Humidity</string>
    <string name="chart_wind_speed">Wind speed</string>
    <string name="chart_pressure_y_title">pressure in [mb]</string>
    <string name="login_wait">Please wait login in progress</string>
    <string name="ok_value">OK</string>
    <string name="cancel_value">Cancel</string>
    <string name="raw_sensor">SENSOR</string>
    <string name="raw_telemtry">TELEMTRY</string>
    <string name="raw_gps">GPS</string>
</resources>
